<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.ggc.itec.nguyen.grizzlyproject.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_student"
        android:name="edu.ggc.itec.nguyen.grizzlyproject.ui.AddStudentFragment"
        android:label="@string/menu_add_student"
        tools:layout="@layout/fragment_add_student" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.ggc.itec.nguyen.grizzlyproject.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_ocr"
        android:name="edu.ggc.itec.nguyen.grizzlyproject.ui.OCRFragment"
        android:label="@string/menu_ocr"
        tools:layout="@layout/fragment_o_c_r" />
    <fragment
        android:id="@+id/nav_about"
        android:name="edu.ggc.itec.nguyen.grizzlyproject.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_o_c_r" />
</navigation>